<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Actividades</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="NombreProyecto">App_Project</string>
    <string name="Usuario">Ingrese Usuario</string>
    <string name="Pass">Ingrese Contraseña</string>
    <string name="Access">Ingresar</string>
    <string name="nombreNuevaActividad">Ingrese Nombre Actividad</string>
    <string name="competenciasNuevaActividad">Ingrese Competencias Actividad</string>
    <string name="descripcionNuevaActividad">Ingrese Descripción Actividad</string>
    <string name="evaluacionNuevaActividad">Ingrese Evaluación Actividad</string>
    <string name="bagregarImg">Agregar Imagen</string>
    <string name="bagregarVid">Agregar Video</string>
    <string name="bagregarAud">Agregar Sonido</string>    
    
    <color name="azul">#2E9AFE</color>
    <color name="gris">#CED8F6</color>
    

</resources>
