<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

	<LinearLayout 
	    android:layout_gravity="center"
	    android:gravity="center"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
    
	 	<EditText
	 	    android:background="@drawable/cajas"
	 	    android:layout_gravity="center"
	 	    android:id="@+id/nombreActividad"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>        
	 	<TextView 
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"/>
	 	
	 	<EditText 	    
	 	    android:background="@drawable/cajas"
	 	    android:layout_gravity="center"
	 	    android:id="@+id/competenciasActividad"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
	 	<TextView 
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"/>
 	
	 	<EditText
	 	    android:background="@drawable/cajas"
	 	    android:layout_gravity="center"
	 	    android:id="@+id/descripcionActividad"
	 	    android:lines="5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        	        
	        android:inputType="textMultiLine"/>
	    <TextView 
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"/>
	 	<EditText 	    
	 	    android:background="@drawable/cajas"
	 	    android:layout_gravity="center"
	 	    android:id="@+id/evaluacionAct"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
	 	<TextView 
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"/>
 		<Button
 		    android:background="@drawable/botones"
 		    android:layout_gravity="center"
 		    android:textColor="@color/gris" 		    
	 	    android:id="@+id/bImagen"
	 	    android:text="@string/bagregarImg"
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"
	 	    android:onClick="addimagen"/>
 		
 		<TextView
 		    android:layout_gravity="center"
 		    android:text=""
 		    android:id="@+id/texImagen"	 	    
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"/>
 		    
 		<Button
 		    android:background="@drawable/botones"
 		    android:layout_gravity="center"
 		    android:textColor="@color/gris" 		    
	 	    android:id="@+id/bVideo"
	 	    android:text="@string/bagregarVid"
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"
	 	    android:onClick="addvideo"/>
 		
 		<TextView
 		    android:layout_gravity="center"
 		    android:text=""
 		    android:id="@+id/texVideo"	 	    
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"/> 	    
 		    
 		<Button
 		    android:background="@drawable/botones"
 		    android:layout_gravity="center"
 		    android:textColor="@color/gris" 		    
	 	    android:id="@+id/bAudio"
	 	    android:text="@string/bagregarAud"
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"
	 	    android:onClick="addaudio"/>
 		
 		<TextView
 		    android:layout_gravity="center"
 		    android:text=""
 		    android:id="@+id/texAudio"	 	    
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"/>
 		
	 	<TextView
 		    android:text="" 		    
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"/>
	 	
 		<Button 
 		    android:background="@drawable/botones"
	 	    android:layout_gravity="center"
	 	    android:textColor="@color/gris"	 	    
	 	    android:id="@+id/Actualizar"
	 	    android:text="Actualizar Actividad"
	 	    android:onClick="actualizar"
	 	    android:layout_width="match_parent" 
			android:layout_height="wrap_content"/>
 		
</LinearLayout>
</ScrollView>